--- a/简介.md
+++ b/简介.md
@@ -1,5 +1,5 @@
 # 操作系统切换开关
- 这是一个可以帮助你在个人电脑上自由切换操作系统的项目。有了它，你就可以在不使用鼠标键盘的情况下在Windows和Linux之间快速切换。支持关机状态下切换和系统运行时切换。
+。这是一个可以帮助你在个人电脑上自由切换操作系统的项目。该项目可以通过拨动开关（不使用鼠标键盘）快速切换Windows和Linux系统。支持关机状态下切换和系统运行时切换。 (。
 
 ## 硬件
 - 项目里提供了一个简易模型的设计文件和BOM清单，有经验的朋友可以自行通过PCB打样然后焊接制作。实物图片如下所示（元器件可以根据实际情况删减）：
